force-app/main/default/objects/VehicleParts__x/VehicleParts__x.object-meta.xml
<CustomObject>
    <description>VehicleParts</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>VehicleParts</externalName>
    <label>SAP Vehicle Part</label>
    <pluralLabel>SAP Vehicle Parts</pluralLabel>
</CustomObject>