force-app/main/default/objects/VehicleParts__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>