force-app/main/default/objects/VehicleParts__x/fields/Installed__c.field-meta.xml
<CustomField>
    <fullName>Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Installed</description>
    <externalDeveloperName>Installed</externalDeveloperName>
    <label>Installed</label>
    <type>Checkbox</type>
</CustomField>