force-app/main/default/objects/VehicleParts__x/fields/Partnumber__c.field-meta.xml
<CustomField>
    <fullName>Partnumber__c</fullName>
    <description>Partnumber</description>
    <externalDeveloperName>Partnumber</externalDeveloperName>
    <label>Part Number</label>
    <length>128</length>
    <referenceTo>Parts__x</referenceTo>
    <relationshipLabel>SAP Vehicle Parts</relationshipLabel>
    <relationshipName>VehicleParts</relationshipName>
    <type>ExternalLookup</type>
</CustomField>