force-app/main/default/objects/VehicleParts__x/fields/Serialnumber__c.field-meta.xml
<CustomField>
    <fullName>Serialnumber__c</fullName>
    <description>Serialnumber</description>
    <externalDeveloperName>Serialnumber</externalDeveloperName>
    <label>Serial Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>