force-app/main/default/objects/VehicleParts__x/fields/Vehicleid__c.field-meta.xml
<CustomField>
    <fullName>Vehicleid__c</fullName>
    <description>Vehicleid</description>
    <externalDeveloperName>Vehicleid</externalDeveloperName>
    <label>Vehicle</label>
    <length>128</length>
    <referenceTargetField>Vehicle__c.SAP_ID__c</referenceTargetField>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>VehicleParts</relationshipLabel>
    <relationshipName>VehicleParts</relationshipName>
    <type>IndirectLookup</type>
</CustomField>