force-app/main/default/objects/VehicleParts__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Serialnumber__c</columns>
    <columns>Partnumber__c</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>Vehicleid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>